--- a/WebContent/public/html/compte_edition.html
+++ b/WebContent/public/html/compte_edition.html
@@ -1,201 +1,206 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/ENI_encheres/public/css/bootstrap.min.css">
-    <title>Edition de compte</title>
-    <link rel="stylesheet" href="/ENI_encheres/public/css/style.css">
-  </head>
-  <body>
+<link rel="stylesheet" href="/ENI_encheres/public/css/bootstrap.min.css">
+<title>Edition de compte</title>
+<link rel="stylesheet" href="/ENI_encheres/public/css/style.css">
+</head>
+<body>
 
-    <!-- JSON responce -->
-    <!--
+	<!-- JSON responce -->
+	<!--
 
 
 
     -->
 
-    <!-- top bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./accueil.html">ENI_encheres</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+	<!-- top bar -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<a class="navbar-brand" href="./accueil.html">ENI_encheres</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./accueil.html">Enchères</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./encheres_nouveau.html">Vendre un article</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./compte_mon_profil.html">Mon profil</a>
-          </li>
-          <li class="nav-item">
-            <a onclick="deconnexion()" class="nav-link" href="./index.html">Déconnexion</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+		<div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item"><a class="nav-link" href="./accueil.html">Enchères</a>
+				</li>
+				<li class="nav-item"><a class="nav-link"
+					href="./encheres_nouveau.html">Vendre un article</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="./compte_mon_profil.html">Mon profil</a></li>
+				<li class="nav-item"><a onclick="deconnexion()"
+					class="nav-link" href="./index.html">Déconnexion</a></li>
+			</ul>
+		</div>
+	</nav>
 
-    <!-- titre -->
-    <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">
-          <h1>Edition de compte</h1>
-        </div>
-      </div>
-    </div>
+	<!-- titre -->
+	<div class="container">
+		<div class="row justify-content-md-center">
+			<div class="col-md-auto">
+				<h1>Edition de compte</h1>
+			</div>
+		</div>
+	</div>
 
-    <!-- Main content -->
-    <div class="row justify-content-md-center" style="margin-top:2rem;">
-      <div class="col col-lg-8">
-        <form>
+	<!-- Main content -->
+	<div class="row justify-content-md-center" style="margin-top: 2rem;">
+		<div class="col col-lg-8">
+			<form>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Pseudo : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputPseudo"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Nom : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputNom"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Pseudo : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputPseudo"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Nom : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputNom"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Prénom : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputPrenom"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Email : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputEmail"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Prénom : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputPrenom"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Email : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputEmail"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Téléphone : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputTelephone"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Rue : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputRue"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Téléphone : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputTelephone"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Rue : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputRue"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Code postal : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputCodePostal"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Ville : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputVille"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Code postal : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputCodePostal"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Ville : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputVille"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Mot de passe actuel : </label>
-                <div class="col-sm-8">
-                  <div id="compteEditionInputMotDePasse"></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Mot de passe
+								actuel : </label>
+							<div class="col-sm-8">
+								<div id="compteEditionInputMotDePasse"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-6"></div>
+				</div>
 
-            </div>
-          </div>
+				<div class="form-group row">
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Nouveau mot de
+								passe : </label>
+							<div class="col-sm-8">
+								<input type="password" class="form-control"
+									placeholder="Nouveau mot de passe">
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<label class="col-sm-4 col-form-label">Confirmation : </label>
+							<div class="col-sm-8">
+								<input type="password" class="form-control"
+									placeholder="Confirmation">
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <div class="form-group row">
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Nouveau mot de passe : </label>
-                <div class="col-sm-8">
-                  <input type="password" class="form-control" placeholder="Nouveau mot de passe">
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row">
-                <label class="col-sm-4 col-form-label">Confirmation : </label>
-                <div class="col-sm-8">
-                  <input type="password" class="form-control" placeholder="Confirmation">
-                </div>
-              </div>
-            </div>
-          </div>
+			</form>
+		</div>
+	</div>
 
-        </form>
-      </div>
-    </div>
+	<div class="row justify-content-md-center" style="margin-top: 1rem;">
+		<div class="col-1">
+			<h6>Crédit :</h6>
+		</div>
+		<div class="col-3">
+			<div id="compteEditionCredit"></div>
+		</div>
+	</div>
 
-    <div class="row justify-content-md-center" style="margin-top:1rem;">
-      <div class="col-1">
-        <h6>Crédit : </h6>
-      </div>
-      <div class="col-3">
-        <div id="compteEditionCredit"></div>
-      </div>
-    </div>
+	<div class="row" style="margin-top: 1rem;">
+		<div class="col-6 d-flex align-items-end flex-column">
+			<!-- Enregistrer en base -->
+			<a href="./accueil.html" class="btn btn-outline-success my-2 my-sm-0"
+				role="button">Enregistrer</a>
+		</div>
+		<div class="col-6">
+			<!-- Supprimer en base -->
+			<a href="./index.html" class="btn btn-outline-success my-2 my-sm-0"
+				role="button">Supprimer mon compte</a>
+		</div>
+	</div>
 
-    <div class="row" style="margin-top:1rem;">
-      <div class="col-6 d-flex align-items-end flex-column">
-        <!-- Enregistrer en base -->
-        <a href="./accueil.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Enregistrer</a>
-      </div>
-      <div class="col-6">
-        <!-- Supprimer en base -->
-        <a href="./index.html" class="btn btn-outline-success my-2 my-sm-0" role="button">Supprimer mon compte</a>
-      </div>
-    </div>
-
-    <!-- export -->
-    <script src="/ENI_encheres/public/js/tools/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="/ENI_encheres/public/js/tools/bootstrap.min.js"></script>
+	<!-- export -->
+	<script src="/ENI_encheres/public/js/tools/jquery-3.4.1.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="/ENI_encheres/public/js/tools/bootstrap.min.js"></script>
 	<script src="/ENI_encheres/public/js/tools/logger.js"></script>
-    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
-    <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
-    <script src="/ENI_encheres/public/js/compte_edition.js"></script>
-  </body>
+	<script src="/ENI_encheres/public/js/tools/htmlBuilder.js"></script>
+	<script src="/ENI_encheres/public/js/tools/cookies.js"></script>
+	<script src="/ENI_encheres/public/js/compte_edition.js"></script>
+</body>
 </html>
